# company_knowledge_core

./: .gitignore  AGENTS.md  Makefile  README.md  index.md  log.md  pyproject.toml
actors/: actor-bfdc41fb01.md  index.md  runner.meimei-mac-local-codex.md
agent-os-colleague-kit/: README.md  agent-os-init.sh
agents/: agent.antigravity.local.md  agent.billing-lite.executor.md  agent.billing-lite.knowledge-engineering.md  agent.billing-lite.product-manager.md  agent.billing-lite.project-manager.md  agent.codex.local.md  agent.company-knowledge-core.knowledge-engineering.md  agent.company.architecture.md  agent.company.design.md  agent.company.development.md  agent.company.knowledge-query.md  agent.company.operations.md  agent.company.product-manager.md  agent.company.project-manager.md  agent.company.test.md  agent.labi-touping.executor.md  agent.labi-touping.knowledge-engineering.md  agent.labi-touping.product-manager.md  agent.labi-touping.project-manager.md  agent.picpeek.executor.md  agent.picpeek.knowledge-engineering.md  agent.picpeek.product-manager.md  agent.picpeek.project-manager.md  agent.zknowai-official-website.executor.md  agent.zknowai-official-website.knowledge-engineering.md  (+3 more)
projects/company-knowledge-core/desktop-native-proof/src-tauri/: Cargo.toml  tauri.conf.json
projects/company-knowledge-core/desktop-native-proof/src-tauri/capabilities/: default.json
projects/company-knowledge-core/desktop-native-proof/src-tauri/resources/: runner-pairing.schema.json
projects/company-knowledge-core/desktop-native-proof/src-tauri/src/: lib.rs  main.rs
(+6273 files in other folders)
