[package]
name = "zhenzhi_ai_native_os_desktop"
version = "0.1.0-native-proof"
description = "Zhenzhi AI Native OS desktop native proof"
authors = ["Zhenzhi"]
edition = "2021"
license = "UNLICENSED"

[lib]
name = "zhenzhi_ai_native_os_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-deep-link = "2"
tauri-plugin-notification = "2"
tauri-plugin-stronghold = "2"
tauri-plugin-updater = "2"

[profile.dev.package.scrypt]
opt-level = 3
